Respect quarkus.class-loading.removed-artifacts when re-augmenting an app
(cherry picked from commit 3dea1ceb89faab019cbd8703f28507b9c3febd4f)